--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import "./utils/variables";
 @import "./utils/mixins";
 @import "./utils/slick";
-@import "./utils/slider";
+@import "./utils/slick-theme";
 
 @import "./base/common";
 @import "./base/container";
