--- a/sass/utils/_slick.scss
+++ b/sass/utils/_slick.scss
@@ -90,6 +90,6 @@
 
   border: 1px solid transparent;
 }
-// .slick-arrow.slick-hidden {
-//   display: none;
-// }
+.slick-arrow.slick-hidden {
+  display: none;
+}
